# mq-sentinel

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  IBM_MQ_Diagnostic_MCP_v1_Full_Flavors_Spec.docx  LICENSE  Makefile  README.md  SECURITY.md  VISION.md  pyproject.toml  smithery.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml  security.yml  verify-kc-links.yml
demo/: HOW-TO-RECORD.md  README.md  record.sh  run.sh
demo-sandbox/: README.md
demo-sandbox/fixtures/dlq/: SYSTEM.DEAD.LETTER.QUEUE.json
demo-sandbox/fixtures/mqsc/: DISPLAY_CFSTATUS_ALL__ALL.json  DISPLAY_CHSTATUS_ALL__ALL.json  DISPLAY_CLUSQMGR_ALL__ALL.json  DISPLAY_CLUSQMGR_ALL__CLUSTER.json  DISPLAY_GROUP.json  DISPLAY_NATIVEHASTATUS.json  DISPLAY_QMGR_DEADQ.json  DISPLAY_QMGR_PLATFORM.json  DISPLAY_QMGR_QMNAME.json  DISPLAY_QMGR_REPOS_REPOSNL.json  DISPLAY_QMGR_VERSION.json  DISPLAY_QMSTATUS.json  DISPLAY_QMSTATUS_CHINIT.json  (+3 more)
demo/cached-output/: diagnose_failed_channels.json
deploy/: Dockerfile
deploy/helm/: Chart.yaml  values.yaml
deploy/hosted-demo/: README.md  cloudflared.yml.example  docker-compose.yml
docs/: INSTALL.md  architecture.md  byom.md  demo-script.md  http-transport.md  threat-model.md  usage-with-ai.md
examples/kind/: README.md  install.sh  kind-config.yaml  values.yaml
marketing/: community-ibm-post.md  day2-linkedin-post.md  launch-posts.md  screencast-script.md
packaging/deb/: postinst  prerm
packaging/homebrew/: README.md  mq-sentinel.rb
packaging/mcp/: mcp-manifest.json  registry-entry.md
packaging/rpm/: mq-sentinel.spec
packaging/systemd/: mq-sentinel.env  mq-sentinel.service
scripts/: install.sh  uninstall.sh  verify_kc_links.py
src/mq_sentinel/: __init__.py  config.py  http_app.py  server.py
tests/integration/: test_analyze_dlq_e2e.py  test_check_cluster_health_e2e.py  test_diagnose_channels_e2e.py  test_diagnose_miqm_e2e.py  test_diagnose_native_ha_e2e.py  test_diagnose_rdqm_e2e.py  test_diagnose_zos_e2e.py  test_full_health_check_e2e.py  test_http_transport.py
tests/security/: test_allowlist.py  test_dlq_safety.py  test_remediation_isolation.py  test_sanitizer.py
tests/unit/: test_audit.py  test_channel_matchers.py  test_cluster_matchers.py  test_dlq_matchers.py  test_health_check_summary.py  test_inventory.py  test_kc_registry.py  test_kc_registry_structure.py  test_miqm_matchers.py  test_native_ha_matchers.py  test_oidc_verifier.py  test_ratelimit.py  test_rbac.py  test_rdqm_matchers.py  test_server.py  test_server_dispatch_v2.py  test_topology.py  test_zos_matchers.py
web/: index.html
(+48 files in other folders)
